--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.5",
     "cube-ui": "~1.12.15",
     "js-cookie": "^2.2.1",
+    "less": "^4.1.1",
+    "less-loader": "5.0.0",
     "vant": "^2.12.11",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
