--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^4.1.1",
     "less-loader": "5.0.0",
     "vant": "^2.12.11",
+    "vconsole": "^3.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
