--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vant": "^2.12.11",
     "vconsole": "^3.4.0",
     "vue": "^2.6.11",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
