--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "cos-js-sdk-v5": "^1.2.14",
     "cube-ui": "~1.12.15",
     "js-cookie": "^2.2.1",
     "less": "^4.1.1",
