--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,6 @@ ENV = 'development'
 
 # base api
 # VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://192.168.1.7:8995/mp/'
+# VUE_APP_BASE_API = 'http://192.168.1.7:8995/mp/'
 # VUE_APP_BASE_API = 'https://www.zdzy.xyz/mp-api/'
+VUE_APP_BASE_API = 'http://localhost:8995/mp/'
